RESOLVED FIXED 220536
Multi-codepoint CJK grapheme clusters are not oriented correctly in vertical writing mode
https://bugs.webkit.org/show_bug.cgi?id=220536
Summary Multi-codepoint CJK grapheme clusters are not oriented correctly in vertical ...
Myles C. Maxfield
Reported 2021-01-12 01:01:05 PST
Multi-codepoint CJK grapheme clusters are not oriented correctly in vertical writing mode
Attachments
Patch (4.63 KB, patch)
2021-01-12 01:03 PST, Myles C. Maxfield
zalan: review+
Myles C. Maxfield
Comment 1 2021-01-12 01:03:01 PST
Myles C. Maxfield
Comment 2 2021-01-12 01:03:04 PST
Myles C. Maxfield
Comment 3 2021-01-12 14:58:04 PST
Investigating the Windows failure now.
Myles C. Maxfield
Comment 4 2021-01-12 16:55:14 PST
Lauro Moura
Comment 5 2021-01-15 08:27:51 PST
GTK/WPE renders the glyph correctly but with a slightly different positioning, ditto for Firefox 85 and Chromium 87. The same occurs for single codepoints. Does the spec require them to to be layout exactly the same (i.e. single grapheme in vertical and horizontal modes) or it's something open and the test could be tweaked to work in GTK/WPE?
Myles C. Maxfield
Comment 6 2021-01-15 10:20:36 PST
(In reply to Lauro Moura from comment #5) > GTK/WPE renders the glyph correctly but with a slightly different > positioning, ditto for Firefox 85 and Chromium 87. The same occurs for > single codepoints. > > Does the spec require them to to be layout exactly the same (i.e. single > grapheme in vertical and horizontal modes) or it's something open and the > test could be tweaked to work in GTK/WPE? They don’t *have* to be exactly the same. However, the em box is usually a perfect square, so it would be good to at least determine where the offset comes from in GTK/WPE. One would expect that rotating a perfect square by 90deg would lead to an identical rendering.
Lauro Moura
Comment 7 2021-01-15 18:50:19 PST
(In reply to Myles C. Maxfield from comment #6) > (In reply to Lauro Moura from comment #5) > > GTK/WPE renders the glyph correctly but with a slightly different > > positioning, ditto for Firefox 85 and Chromium 87. The same occurs for > > single codepoints. > > > > Does the spec require them to to be layout exactly the same (i.e. single > > grapheme in vertical and horizontal modes) or it's something open and the > > test could be tweaked to work in GTK/WPE? > > They don’t *have* to be exactly the same. However, the em box is usually a > perfect square, so it would be good to at least determine where the offset > comes from in GTK/WPE. One would expect that rotating a perfect square by > 90deg would lead to an identical rendering. For GTK/WPE in this test the box seems to be slightly rectangular (111x100) and slightly offset (-6,0 and 0,-6, depending on the orientation). I've opened bug220680 to track it.
Note You need to log in before you can comment on or make changes to this bug.